limit order as default and regenerated bitfinex handler

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 PORT=3000
 LOG_TO_CONSOLE=true
 USE_SANDBOX=true
+DEFAULT_EXCHANGE=PHEMEX
+DEFAULT_ORDER_TYPE=Limit
 
 # Phemex settings
 ENABLE_PHEMEX=true
@@ -15,7 +17,4 @@ BITFINEX_API_KEY=your_bitfinex_api_key
 BITFINEX_API_SECRET=your_bitfinex_api_secret
 BITFINEX_API_KEY_SANDBOX=your_bitfinex_api_key_sandbox
 BITFINEX_API_SECRET_SANDBOX=your_bitfinex_api_secret_sandbox
-
-# Default exchange (optional)
-EXCHANGE=phemex
 
