--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,13 @@
 PORT=3000
-LOG_TO_CONSOLE=true
 USE_SANDBOX=true
 DEFAULT_EXCHANGE=PHEMEX
 DEFAULT_ORDER_TYPE=Limit
+
+# Logging
+LOG_TO_CONSOLE=true
+LOG_TO_FILE=false
+LOG_REQUESTS=true
+LOG_REQUESTS_TO_FILE=true
 
 # Phemex settings
 ENABLE_PHEMEX=true
