--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest --passWithNoTests"
+    "test": "cross-env NODE_ENV=test jest --passWithNoTests"
   },
   "dependencies": {
     "axios": "^1.5.0",
     "ccxt": "^3.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "supertest": "^7.0.0",
     "winston": "^3.9.0"
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.9",
+    "cross-env": "^7.0.3",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
